contact finished and about us started

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                 <div class="hamburger-logo">
                     <img src="images/discovinlogo.png" alt="Disco Vintage Logo">
                 </div>
-                <a id="active" href="index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="contact.html">Contact</a>
                 <a href="about.html">About Us</a>
                 <a href="booking.html">Booking</a>
@@ -36,16 +36,32 @@
         </div>
         <nav>
             <a href="index.html">Home</a>
-            <a id="active" href="contact.html">Contact</a>
-            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact</a>
+            <a id="active" href="about.html">About Us</a>
             <a href="booking.html">Booking</a>
         </nav>
     </header>
     <div class="content">
-        <div class="text-section">
-
-
-        </div>
+        <section class="text-section about">
+            <div class="card">
+                <h2>Our Team</h2>
+                <p>Our team at Vintage Disco brings the energy to every night. Our skilled bartenders craft
+                    vintage-inspired cocktails, while our attentive waitstaff make sure you have everything you need to
+                    keep the good vibes going. And our talented DJs spin classic disco tracks, lighting up the dance
+                    floor with ‘70s and ‘80s grooves. Together, they create the perfect mix of music, service, and style
+                    for an unforgettable experience. Do you want to join us?
+                    Contact us <a href="contact.html">here!</a></p>
+            </div>
+            <div class="image-card">
+                <img src="images/bar-image.jpeg">
+            </div>
+            <div class="card">
+                <h2>Our Mission</h2>
+                <p>Our mission is to revive the disco era’s unique charm by hosting events, parties, and gatherings
+                    where people can dance, connect, and enjoy timeless music. We believe that the joy of disco lies in
+                    its inclusivity.</p>
+            </div>
+        </section>
     </div>
     <footer>
         <div class="footer-text">
