--- a/contact.html
+++ b/contact.html
@@ -43,21 +43,22 @@
     </header>
     <div class="content">
         <div class="contact-text">
-            <h2>Contact</h2>
-            <a href="mailto:support@discovintage.com">support@discovintage.com</a>
-            <h2>Main Location</h2>
-            <a href="https://maps.app.goo.gl/Vh6iiaoiJGqGQwH46">Herzogenburger straße 36, St. Pölten 3100</a>
-            <h2>Lost and Found</h2>
-            <p>Please send an email to <a href="mailto:lost@ostgut.de">lost@ostgut.de</a> with an accurate description
-                of your lost item and date of loss.
-            </p>
-            <p>Pickup is possible only on <b>Wednesdays from 2 - 6 p.m.</b></p>
-            <div class="map"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0"
-                    marginwidth="0"
-                    src="https://maps.google.com/maps?width=100%25&amp;height=800&amp;hl=en&amp;q=Herzogenburger%20Str.%2036,%20St.Pulten,%20Austria+(Disco%20Vintage)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
-                        href="https://www.gps.ie/">gps vehicle tracker</a></iframe></div>
-
-
+            <div class="txt">
+                <h2>Contact</h2>
+                <a href="mailto:support@discovintage.com">support@discovintage.com</a>
+                <h2>Main Location</h2>
+                <a href="https://maps.app.goo.gl/Vh6iiaoiJGqGQwH46">Herzogenburger straße 36, St. Pölten 3100</a>
+                <h2>Lost and Found</h2>
+                <p>Please send an email to <a href="mailto:lost@ostgut.de">lost@ostgut.de</a> with an accurate
+                    description
+                    of your lost item and date of loss.
+                </p>
+                <p>Pickup is possible only on <b>Wednesdays from 2 - 6 p.m.</b></p>
+                <div class="map"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0"
+                        marginwidth="0"
+                        src="https://maps.google.com/maps?width=100%25&amp;height=800&amp;hl=en&amp;q=Herzogenburger%20Str.%2036,%20St.Pulten,%20Austria+(Disco%20Vintage)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
+                            href="https://www.gps.ie/">gps vehicle tracker</a></iframe></div>
+            </div>
         </div>
     </div>
     <footer>
