--- a/booking.html
+++ b/booking.html
@@ -42,8 +42,24 @@
         </nav>
     </header>
     <div class="content">
-        <div class="text-section">
+        <div class="text-section booking">
+            <h2>Don't be late — grab the best seats at Vintage Disco!</h2>
+            <h1>Booking form</h1>
+            <form class="booking-form">
+                <label for="name">Your Name and Surname*</label>
+                <input type="text" id="name" name="name" required>
 
+                <label for="email">Your email*</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="phone">Your phone*</label>
+                <input type="tel" id="phone" name="phone" required>
+
+                <label for="date">Reservation date*</label>
+                <input type="date" id="date" name="date" required>
+
+                <button type="submit">Submit</button>
+            </form>
 
         </div>
     </div>
