--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                 <div class="hamburger-logo">
                     <img src="images/discovinlogo.png" alt="Disco Vintage Logo">
                 </div>
-                <a id="active" href="index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="contact.html">Contact</a>
                 <a href="about.html">About Us</a>
                 <a href="booking.html">Booking</a>
