--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                     Contact us <a href="contact.html">here!</a></p>
             </div>
             <div class="image-card">
-                <img src="images/bar-image.jpeg">
+                <img src="images/bar-image.jpeg" alt="bar image">
             </div>
             <div class="card">
                 <h2>Our Mission</h2>
