--- a/booking.html
+++ b/booking.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Disco Vintage">
+    <meta name="description" content="Sajt o zamisljenom disko klubu sa muzikom 70tih, 80tih, i 90tih">
+    <meta name="keywords" content="muzika,70te,80te,90te,klub,disko,ples,plesanje">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="Serbian">
+    <meta name="author" content="Disco Vintage Team">
     <title>Disco Vintage</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
