--- a/about.html
+++ b/about.html
@@ -35,38 +35,41 @@
                 <div class="hamburger-logo">
                     <img src="images/discovinlogo.png" alt="Disco Vintage Logo">
                 </div>
-                <a href="index.html">Home</a>
-                <a href="contact.html">Contact</a>
-                <a href="about.html">About Us</a>
-                <a href="booking.html">Booking</a>
+                <a href="index.html">Početna</a>
+                <a href="contact.html">Kontakt</a>
+                <a href="about.html">O nama</a>
+                <a href="booking.html">Rezervacija</a>
             </div>
         </div>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="contact.html">Contact</a>
-            <a id="active" href="about.html">About Us</a>
-            <a href="booking.html">Booking</a>
+            <a id="active" href="index.html">Početna</a>
+            <a href="contact.html">Kontakt</a>
+            <a href="about.html">O nama</a>
+            <a href="booking.html">Rezervacija</a>
         </nav>
     </header>
     <div class="content">
         <section class="text-section about">
             <div class="card">
-                <h2>Our Team</h2>
-                <p>Our team at Vintage Disco brings the energy to every night. Our skilled bartenders craft
-                    vintage-inspired cocktails, while our attentive waitstaff make sure you have everything you need to
-                    keep the good vibes going. And our talented DJs spin classic disco tracks, lighting up the dance
-                    floor with ‘70s and ‘80s grooves. Together, they create the perfect mix of music, service, and style
-                    for an unforgettable experience. Do you want to join us?
-                    Contact us <a href="contact.html">here!</a></p>
+                <h2>Naš tim</h2>
+                <p>Naš tim u Disko Vintidžu donosi energiju svake večeri. Naši vešti barmeni pripremaju koktele
+                    inspirisane
+                    vintidž stilom, dok naše pažljivo osoblje brine da imate sve što vam je potrebno za dobru atmosferu.
+                    Naši talentovani DJ-evi puštaju klasične disko hitove, osvetljavajući plesni podijum ritmovima 70-ih
+                    i
+                    80-ih. Zajedno, oni stvaraju savršenu kombinaciju muzike, usluge i stila za nezaboravno iskustvo.
+                    Želite
+                    li nam se pridružiti? Kontaktirajte nas <a href="contact.html">ovde!</a></p>
             </div>
             <div class="image-card">
                 <img src="images/bar-image.jpeg" alt="bar image">
             </div>
             <div class="card">
-                <h2>Our Mission</h2>
-                <p>Our mission is to revive the disco era’s unique charm by hosting events, parties, and gatherings
-                    where people can dance, connect, and enjoy timeless music. We believe that the joy of disco lies in
-                    its inclusivity.</p>
+                <h2>Naša misija</h2>
+                <p>Naša misija je da oživimo jedinstveni šarm disko ere organizovanjem događaja, zabava i okupljanja gde
+                    ljudi mogu plesati, povezivati se i uživati u bezvremenoj muzici. Verujemo da radost diska leži u
+                    njegovoj
+                    inkluzivnosti.</p>
             </div>
         </section>
     </div>
