--- a/index.html
+++ b/index.html
@@ -35,31 +35,29 @@
                 <div class="hamburger-logo">
                     <img src="images/discovinlogo.png" alt="Disco Vintage Logo">
                 </div>
-                <a href="index.html">Home</a>
-                <a href="contact.html">Contact</a>
-                <a href="about.html">About Us</a>
-                <a href="booking.html">Booking</a>
+                <a href="index.html">Početna</a>
+                <a href="contact.html">Kontakt</a>
+                <a href="about.html">O nama</a>
+                <a href="booking.html">Rezervacija</a>
             </div>
         </div>
         <nav>
-            <a id="active" href="index.html">Home</a>
-            <a href="contact.html">Contact</a>
-            <a href="about.html">About Us</a>
-            <a href="booking.html">Booking</a>
+            <a id="active" href="index.html">Početna</a>
+            <a href="contact.html">Kontakt</a>
+            <a href="about.html">O nama</a>
+            <a href="booking.html">Rezervacija</a>
         </nav>
     </header>
     <div class="content">
         <div class="container">
             <div class="text-section">
                 <div class="txt">
-                    <h2>Step into Vintage Disco</h2>
+                    <h2>Uđite u Vintage Disco</h2>
                     <p>
-                        With neon lights, groovy décor, and classic disco hits, Vintage Disco transports you straight to
-                        the
-                        '70s and '80s. Our vibrant dance floor, signature cocktails, and electric vibe promise an
-                        unforgettable night for every disco lover. Join us, let loose, and dance the night away in
-                        vintage
-                        style!
+                        Uz neon svetla, ritmičan dekor i klasične disko hitove, Vintage Disco vas odvodi pravo u
+                        sedamdesete i osamdesete. Naš živopisni plesni podijum, prepoznatljivi kokteli i električna
+                        energija obećavaju nezaboravnu noć za svakog ljubitelja diska. Pridružite nam se, opustite se
+                        i plešite celu noć u vintage stilu!
                     </p>
                 </div>
                 <img src="images/disco-ball.jpeg" alt="Disco Ball">
@@ -72,17 +70,14 @@
         <div class="grid-row">
             <div class="sub-section">
                 <div class="txt">
-                    <h3>About Last Night</h3>
-                    <p>Last night at Vintage Disco was pure magic. The neon lights bathed the groovy décor in a
-                        kaleidoscope
-                        of colors, setting the perfect retro vibe. Classic disco hits filled the air, and the vibrant
-                        dance
-                        floor was alive with energy as everyone let loose, moving to the infectious beats of the '70s
-                        and
-                        '80s. The signature cocktails were a hit, adding an extra sparkle to the night. From the
-                        electric
-                        atmosphere to the nostalgic tunes, it was an unforgettable evening of vintage style and endless
-                        fun.
+                    <h3>O prošloj noći</h3>
+                    <p>
+                        Prošla noć u Vintage Disco-u bila je čista magija. Neon svetla su obasjavala ritmični dekor u
+                        kaleidoskopu boja, stvarajući savršenu retro atmosferu. Klasični disko hitovi ispunili su
+                        vazduh, a živopisni plesni podijum bio je pun energije dok su svi puštali dušu, pomerajući
+                        se uz zarazne ritmove sedamdesetih i osamdesetih. Naši prepoznatljivi kokteli bili su pravi
+                        hit, dodajući dodatni sjaj večeri. Od električne atmosfere do nostalgičnih melodija, to je
+                        bila nezaboravna večer vintage stila i beskrajne zabave.
                     </p>
                 </div>
             </div>
