--- a/about.html
+++ b/about.html
@@ -12,7 +12,8 @@
     <meta name="language" content="Serbian">
     <meta name="author" content="Disco Vintage Team">
     <title>Disco Vintage</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/about.css">
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <script>
         function toggleNav() {
