--- a/booking.html
+++ b/booking.html
@@ -12,7 +12,8 @@
     <meta name="language" content="Serbian">
     <meta name="author" content="Disco Vintage Team">
     <title>Disco Vintage</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/booking.css">
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <script>
         function toggleNav() {
@@ -51,7 +52,7 @@
     <div class="content">
         <div class="text-section booking">
             <h2>Nemojte zakasniti uzmite najbolje karte!</h2>
-            <h1>Booking form</h1>
+            <h1>Kupovina karata</h1>
             <form class="booking-form">
                 <label for="name">Ime*</label>
                 <input type="text" id="name" name="name" required>
