Gotov sajt plus dodata slika na about page

--- a/about.html
+++ b/about.html
@@ -43,9 +43,9 @@
             </div>
         </div>
         <nav>
-            <a id="active" href="index.html">Početna</a>
+            <a href="index.html">Početna</a>
             <a href="contact.html">Kontakt</a>
-            <a href="about.html">O nama</a>
+            <a id="active" href="about.html">O nama</a>
             <a href="booking.html">Rezervacija</a>
         </nav>
     </header>
@@ -61,6 +61,9 @@
                     80-ih. Zajedno, oni stvaraju savršenu kombinaciju muzike, usluge i stila za nezaboravno iskustvo.
                     Želite
                     li nam se pridružiti? Kontaktirajte nas <a href="contact.html">ovde!</a></p>
+            </div>
+            <div class="image-card">
+                <img src="images/bar-image2.webp" alt="disco ball image">
             </div>
             <div class="image-card">
                 <img src="images/bar-image.jpeg" alt="bar image">
