--- a/booking.html
+++ b/booking.html
@@ -43,10 +43,10 @@
             </div>
         </div>
         <nav>
-            <a id="active" href="index.html">Početna</a>
+            <a href="index.html">Početna</a>
             <a href="contact.html">Kontakt</a>
             <a href="about.html">O nama</a>
-            <a href="booking.html">Rezervacija</a>
+            <a id="active" href="booking.html">Rezervacija</a>
         </nav>
     </header>
     <div class="content">
