--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,8 @@
             </div>
         </div>
         <nav>
-            <a id="active" href="index.html">Početna</a>
-            <a href="contact.html">Kontakt</a>
+            <a href="index.html">Početna</a>
+            <a id="active" href="contact.html">Kontakt</a>
             <a href="about.html">O nama</a>
             <a href="booking.html">Rezervacija</a>
         </nav>
