--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
             <div class="sub-section item1">
                 <div class="txt">
-                    <h3>Upcoming Events</h3>
+                    <h3>Događaji</h3>
                     <div class="event">
                         <div class="left">
                             <h2>7.</h2>
@@ -130,7 +130,8 @@
                             <p>Special Guests</p>
                         </div>
                     </div>
-                    <p>Don’t miss out on our upcoming vintage disco nights! Mark your calendars and join the fun.</p>
+                    <p>Ne propustite naše predstojeće vintage disko večeri! Označite u svojim kalendarima i pridružite
+                        se zabavi.p>
                 </div>
             </div>
         </div>
