--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                     <p>Ne propustite naše predstojeće vintage disko večeri! Označite u svojim kalendarima i pridružite
-                        se zabavi.p>
+                        se zabavi.
                 </div>
             </div>
         </div>
